Fixed getting claims and added json field createdAt
